--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,7 @@
 <head>
   <title>Divyansh Dwivedi</title>
   <meta name="viewport" content="width=device-width; initial-scale=1.0;maximum-scale=1.0; user-scalable=0;" />
+  <meta name="viewport" content="width=device-width" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,800" rel="stylesheet">
 </head>
 
